# Bonch_project

./: .gitignore  CMakeLists.txt  mainwindow.ui  resources.qrc
include/: edge.h  graph.h  graphenums.h  graphwidget.h  mainwindow.h  node.h
qss/styles/: defaultstyle.qss
src/: edge.cpp  graph.cpp  graphwidget.cpp  main.cpp  mainwindow.cpp  node.cpp
src/core/enums/: graphenums.h
src/core/model/: edge.cpp  edge.h  graph.cpp  graph.h  messagebus.cpp  messagebus.h  node.cpp  nodeinfowidget.cpp  nodeinfowidget.h  nodemodel.cpp  nodemodel.h
src/core/reliability/: logicalforms.cpp  logicalforms.h  networkanalyzer.cpp  networkanalyzer.h  pathfinder.cpp  pathfinder.h
src/core/simulation/: neuralsystememulator.cpp  neuralsystememulator.h  simulationengine.cpp  simulationengine.h  systemfromneuralmodel.cpp  systemfromneuralmodel.h
src/core/strategies/: imaintenancestrategy.h  strategybasiccontrol.cpp  strategybasiccontrol.h  strategyfixedintervalcontrol.cpp  strategyfixedintervalcontrol.h  strategyinstantcheckdetection.cpp  strategyinstantcheckdetection.h  strategyinstantdetection.cpp  strategyinstantdetection.h  strategynocontrolcheck.cpp  strategynocontrolcheck.h  strategyofflinecheck.cpp  strategyofflinecheck.h  strategyperiodiccontrolemergencyrecovery.cpp  strategyperiodiccontrolemergencyrecovery.h  strategypreventivewithcontrol.cpp  strategypreventivewithcontrol.h
src/ui/: edge.h  graph.cpp  graph.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  nodeinfowidget.cpp  nodeinfowidget.h  reliabilitychart.cpp  reliabilitychart.h  reliabilitywidget.cpp  reliabilitywidget.h
src/utils/: logger.h
